# code-rag-agent

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/domain/: models.py
app/infrastructure/: exceptions.py  github_client.py  neo4j_store.py
app/rag/: indexer.py  query_engine.py
docs/architecture/: 0001-arquitectura-hexagonal.md  0002-rag-hibrido-neo4j.md  0003-estandar-dependencias-contenedor.md
docs/guidelines/: python-coding-standards.md
